--- a/run/conf/inference.yaml
+++ b/run/conf/inference.yaml
@@ -23,8 +23,8 @@ weight:
   run_name: single
 
 seed: 42
-duration: 5760 # durationは32の倍数
-downsample_rate: 2 # durationをdownsample_rateで割った値がnum_framesになる
+duration: 5760 # duration is a multiple of 32
+downsample_rate: 2 # the value of duration divided by downsample_rate is num_frames
 upsample_rate: 1
 batch_size: 32
 num_workers: 2
