--- a/run/conf/train.yaml
+++ b/run/conf/train.yaml
@@ -19,7 +19,7 @@ defaults:
 
 seed: 42
 exp_name: dummy
-duration: 5760 # duration * 5 = number of seconds
+duration: 5760 # duration is a multiple of 32, duration * 5 = number of seconds
 downsample_rate: 2
 upsample_rate: 1
 
@@ -37,7 +37,7 @@ monitor_mode: min
 check_val_every_n_epoch: 1
 
 # Dataset
-offset: 10
+offset: 10 # length of gaussian kernel
 sigma: 6
 bg_sampling_rate: 0.5 # probability of negative samples
 
@@ -69,7 +69,7 @@ features:
   - "hour_cos"
   # - "minute_sin"
   # - "minute_cos"
-  - "sun_event"
+  # - "sun_event"
 
 # optimizer
 optimizer:
