Add transformer and Unet++

--- a/run/conf/inference.yaml
+++ b/run/conf/inference.yaml
@@ -23,7 +23,7 @@ weight:
   run_name: single
 
 seed: 42
-duration: 5760 # duration is a multiple of 32
+duration: 5760 # duration is a number of samples (5 sec), total 8 hours
 downsample_rate: 2 # the value of duration divided by downsample_rate is num_frames
 upsample_rate: 1
 batch_size: 32
