--- a/run/conf/train.yaml
+++ b/run/conf/train.yaml
@@ -14,8 +14,8 @@ defaults:
   - dir: local
   - model: Spec2DCNN
   - feature_extractor: CNNSpectrogram
-  - decoder: TransformerDecoder
-  - split: fold_3
+  - decoder: UNet1DDecoder # TransformerDecoder !!!
+  - split: fold_0
 
 seed: 42
 exp_name: dummy
