--- a/run/conf/train.yaml
+++ b/run/conf/train.yaml
@@ -25,13 +25,13 @@ upsample_rate: 1
 
 # training
 epoch: 50
-batch_size: 32
+batch_size: 24
 num_workers: 12
 accelerator: auto
 use_amp: true
 debug: false
 gradient_clip_val: 1.0
-accumulate_grad_batches: 1
+accumulate_grad_batches: 2 # 1
 monitor: val_loss
 monitor_mode: min
 check_val_every_n_epoch: 1
@@ -79,6 +79,7 @@ optimizer:
 
 # scheduler
 scheduler:
-  type: base # decay
-  decay: 0.1
+  type: base # min_lr
+  min_lr: 1e-4
+  min_epoch: 30
   num_warmup_steps: 0
