--- a/run/conf/decoder/TransformerDecoder.yaml
+++ b/run/conf/decoder/TransformerDecoder.yaml
@@ -1,4 +1,6 @@
-hidden_size: 256 # slows down a lot
-num_layers: 4 # can be changed
-nhead: 4 # changes nothing
-dropout: 0.2 # can be changed
+name: TransformerDecoder
+params:
+  hidden_size: 256 # slows down a lot
+  num_layers: 4 # can be changed
+  nhead: 4 # changes nothing
+  dropout: 0.2 # can be changed
