--- a/run/conf/feature_extractor/CNNSpectrogram.yaml
+++ b/run/conf/feature_extractor/CNNSpectrogram.yaml
@@ -1,10 +1,11 @@
 name: CNNSpectrogram
-base_filters: 64
-kernel_sizes:
-  - 32
-  - 16
-  # - 4 
-  - ${downsample_rate}
-stride: ${downsample_rate}
-sigmoid: true
-reinit: true
+params:
+  base_filters: 64
+  kernel_sizes:
+    - 32
+    - 16
+    # - 4 
+    - ${downsample_rate}
+  stride: ${downsample_rate}
+  sigmoid: true
+  reinit: true
