--- a/run/conf/train.yaml
+++ b/run/conf/train.yaml
@@ -23,34 +23,29 @@ exp_name: dummy
 duration: 8640 # duration is a multiple of 32, duration * 5 = number of seconds
 downsample_rate: 2
 upsample_rate: 1
-
-# training
-epoch: 50
-batch_size: 8
+batch_size: 16
 num_workers: 12
-accelerator: auto
-use_amp: true
-debug: false
-gradient_clip_val: 1.0
-accumulate_grad_batches: 4 # 1
-monitor: val_loss
-monitor_mode: min
-check_val_every_n_epoch: 1
 
-# Dataset
-offset: 20 # length of gaussian kernel
-sigma: 12
-bg_sampling_rate: 0.5 # probability of negative samples
+trainer:
+  epoch: 50
+  accelerator: auto
+  use_amp: true
+  debug: false
+  gradient_clip_val: 1.0
+  accumulate_grad_batches: 2 # 1
+  monitor: val_loss
+  monitor_mode: min
+  check_val_every_n_epoch: 1
 
 # augmentation
-augmentation:
+aug:
   mixup_prob: 0.0
   mixup_alpha: 0.4
   cutmix_prob: 0.0
   cutmix_alpha: 0.4
   
 # post_process
-post_process:
+pp:
   score_th: 0.0001
   distance: 90
 
