--- a/run/conf/train.yaml
+++ b/run/conf/train.yaml
@@ -13,7 +13,7 @@ defaults:
   - _self_
   - dir: local
   - dataset: seg
-  - model: Seg
+  - model: Spec2DCNN
   - feature_extractor: CNNSpectrogram
   - decoder: TransformerDecoder
   - split: fold_3
@@ -23,7 +23,7 @@ exp_name: dummy
 duration: 8640 # duration is a multiple of 32, duration * 5 = number of seconds
 downsample_rate: 2
 upsample_rate: 1
-batch_size: 16
+batch_size: 16 # 8 !!!
 num_workers: 12
 
 trainer:
@@ -32,7 +32,7 @@ trainer:
   use_amp: true
   debug: false
   gradient_clip_val: 1.0
-  accumulate_grad_batches: 2 # 1
+  accumulate_grad_batches: 2 # 4 !!!
   monitor: val_loss
   monitor_mode: min
   check_val_every_n_epoch: 1
