--- a/run/conf/dir/kaggle.yaml
+++ b/run/conf/dir/kaggle.yaml
@@ -2,4 +2,5 @@ data_dir: /kaggle/input/child-mind-institute-detect-sleep-states
 processed_dir: /kaggle/working/processed_data
 output_dir: /kaggle/working/output
 model_dir: /kaggle/input/cmi-model
+t_automodel_dir: /kaggle/input/huggingface/deberta-v3-small
 sub_dir: /kaggle/working
