--- a/run/conf/dir/local.yaml
+++ b/run/conf/dir/local.yaml
@@ -2,4 +2,5 @@ data_dir: /home/alex/Kaggle/DSS/data/child-mind-institute-detect-sleep-states
 processed_dir: /home/alex/Kaggle/DSS/processed_data
 output_dir: /home/alex/Kaggle/DSS/output
 model_dir: /home/alex/Kaggle/DSS/output/model
+t_automodel_dir: /home/alex/Kaggle/DSS/deberta-v3-small
 sub_dir: ./
