--- a/run/conf/dir/local.yaml
+++ b/run/conf/dir/local.yaml
@@ -1,4 +1,4 @@
-type: local
+# type: local
 data_dir: /home/alex/Kaggle/DSS/data/child-mind-institute-detect-sleep-states
 processed_dir: /home/alex/Kaggle/DSS/processed_data
 output_dir: /home/alex/Kaggle/DSS/output
