--- a/run/conf/train.yaml
+++ b/run/conf/train.yaml
@@ -14,25 +14,25 @@ defaults:
   - dir: local
   - dataset: seg # detr
   - model: Spec2DCNN
-  - feature_extractor: LSTMFeatureExtractor # CNNSpectrogram #  !!!
+  - feature_extractor: LSTMFeatureExtractor
   - decoder: TransformerDecoder # DETR2DCNN
   - split: fold_0
 
 seed: 42
 exp_name: dummy
-duration: 8640 # duration is a multiple of 32, duration * 5 = number of seconds
+duration: 17280 # duration is a multiple of 32, duration * 5 = number of seconds
 downsample_rate: 2
 upsample_rate: 1
-batch_size: 8
+batch_size: 4
 num_workers: 12
 
 trainer:
-  epoch: 50
+  epoch: 25
   accelerator: auto
   use_amp: true
   debug: false # true
   gradient_clip_val: 1.0
-  accumulate_grad_batches: 4
+  accumulate_grad_batches: 8
   monitor: val_loss
   monitor_mode: min
   check_val_every_n_epoch: 1
@@ -41,7 +41,7 @@ trainer:
 aug:
   mixup_prob: 0.0
   mixup_alpha: 0.4
-  cutmix_prob: 0 # !!!
+  cutmix_prob: 0.5
   cutmix_alpha: 0.4
   
 # post_process
